# mtg-binder-ai

./: .gitignore  CACHING_REWORK.md  README.md  TODO  cardReader.py  card_identifier_prediction.py  cli.py  collection.py  export_embeddings.py  helpers.py  image_classification_training_pipeline.py  notebook.ipynb
app/: app.json  babel.config.js  eas.json  package-lock.json  package.json
app/__tests__/api/: cards.test.ts  deckSources.test.ts  hooks.test.ts  scryfall.test.ts
app/__tests__/db/: cards.test.ts  collection.test.ts  decks.test.ts
app/__tests__/embeddings/: imageEncoder.test.ts  imageSearch.test.ts  parser.test.ts  similarity.test.ts
app/__tests__/export/: collection.test.ts
app/__tests__/scanner/: ocr.test.ts
app/__tests__/store/: useStore.recentScans.test.ts
app/__tests__/theme/: themes.test.ts
app/__tests__/utils/: cardHelpers.test.ts  deckImport.test.ts  deckSections.test.ts  deckStats.test.ts  mana.test.ts
app/app/: _layout.tsx  profile.tsx  theme-editor.tsx
app/app/(tabs)/: _layout.tsx  decks.tsx  index.tsx  scan.tsx  search.tsx
app/app/card/: [id].tsx
app/app/deck/: [id].tsx
app/modules/card-detector/: expo-module.config.json  package.json
app/modules/card-detector/android/src/main/cpp/: CMakeLists.txt  card_detector_jni.cpp
app/src/api/: cards.ts  deckSources.ts  edhrec.ts  hooks.ts  lruCache.ts  scryfall.ts
app/src/components/: ActionSheet.tsx  AddCardsSheet.tsx  AdditionalPrints.tsx  CardGrid.tsx  CardRow.tsx  CardTile.tsx  (+18 more)
tests/: _set_codes.py  card_pipeline.py  debug_run.py  test_ocr_pipeline.py  trace_excava.py
(+43 files in other folders)
